--- a/resume_page/style.css
+++ b/resume_page/style.css
@@ -3,9 +3,15 @@ h1 {
 	font-family: "Courier New", monospace;
 }
 
-h3 {
-	color: #8994a5;
+nav {
+	background-color: #8994a5;
 	text-align: center;
+	padding: 30px 20px;
+	margin: 0 auto; 
+	font-size: 20px;
+	font-family: "Courier New", monospace;
+
+
 }
 
 img {
@@ -18,7 +24,7 @@ img {
 
 a {
 	text-decoration: none;
-	color: black;
+	color: #aa7b97;
 }
 
 li {
@@ -28,4 +34,14 @@ li {
 
 p {
 	font-weight: bold;
+}
+
+ol {
+	font-size: 20px;
+	font-family: "Courier New", monospace;
+
+}
+
+h3 {
+	font-family: "Courier New", monospace;
 }
